# contenedores_act_1

./: README.md  deploy.sh  docker-compose.yml
backend/: Dockerfile  main.py  pyproject.toml  wait_for_mysql.py
database/: Dockerfile
database/initdb/: init.sql
frontend/: Dockerfile  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue
frontend/src/views/: HomeView.vue
k8s/: backend-deployment.yaml  backend-network-policy.yaml  backend-service.yaml  frontend-deployment.yaml  frontend-service.yaml  ingress.yaml  mysql-alias-service.yaml  mysql-deployment.yaml  mysql-network-policy.yaml  mysql-pvc.yaml  mysql-secret.yaml  mysql-service.yaml  namespace.yaml
